--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Data Exploration in SQL</a></h2>
+										<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql">Data Exploration in SQL</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="covid.jpeg" alt="" /></a>
+									<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="image fit"><img src="images/Covid.jpg" alt="" /></a>
 									<p>Here I explore COVID-19 data within SQL utilizing Azure Data Studios.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
