--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">July 30, 2021</span>
+									<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql">Data Exploration in SQLbr />
+									</a></h2>
+									<p>Here I explore COVID-19 data within SQL utilizing Azure Data Studios.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="image main"><img src="images/Covid.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -67,52 +65,52 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql">Data Exploration in SQL</a></h2>
+										<span class="date">2021</span>
+										<h2><a href="#">Project 2 TBA</a></h2>
 									</header>
-									<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="image fit"><img src="images/Covid.jpg" alt="" /></a>
-									<p>Here I explore COVID-19 data within SQL utilizing Azure Data Studios.</p>
+									<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+									<p>More to come!.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">2021</span>
+										<h2><a href="#">Project 3 TBA<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>More to come!.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">2021</span>
+										<h2><a href="#">Project 4 TBA<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>More to come!.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
+						<header>
+										<span class="date">2021</span>
+										<h2><a href="#">Project 5 TBA<br />
 										nulla imperdiet</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>More to come!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-								<article>
+								</article> -->
+								<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
@@ -136,7 +134,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-							</section>
+							</section> --> -->
 
 						<!-- Footer -->
 							<footer>
@@ -152,9 +150,7 @@
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
-
 					</div>
-
 				<!-- Footer -->
 					<footer id="footer">
 						<!-- <section>
