--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">July 30, 2021</span>
-									<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql">Data Exploration in SQLbr />
+									<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql">Data Exploration in SQL <br/>
 									</a></h2>
-									<p>Here I explore COVID-19 data within SQL utilizing Azure Data Studios.</p>
+									<p>Here I explore COVID-19 data utilizing SQL in Azure Data Studios.</p>
 								</header>
 								<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Views.sql" class="image main"><img src="images/Covid.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -69,7 +69,7 @@
 										<h2><a href="#">Project 2 TBA</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-									<p>More to come!.</p>
+									<p>More to come!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -81,7 +81,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>More to come!.</p>
+									<p>More to come!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -93,7 +93,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>More to come!.</p>
+									<p>More to come!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -102,14 +102,14 @@
 						<header>
 										<span class="date">2021</span>
 										<h2><a href="#">Project 5 TBA<br />
-										nulla imperdiet</a></h2>
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>More to come!</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article> -->
+								</article> 
 								<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
@@ -134,12 +134,12 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-							</section> --> -->
+							</section> --> 
 
-						<!-- Footer -->
+						<!--Footer -->
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -150,7 +150,9 @@
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
+
 					</div>
+
 				<!-- Footer -->
 					<footer id="footer">
 						<!-- <section>
@@ -184,7 +186,7 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(832) 744-1075</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
