--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Jordan Petty's Portfolio</h1><br />
 		
 						<p>Data Analyst & BI Developer, skilled in Power BI, and SQL. LinkedIn: <a href="https://www.linkedin.com/in/jordan-petty-aa561268/">@JPetty</a></a><br />
-						</a>.</p>
+						</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -40,7 +40,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jordan-petty-aa561268/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/JOPETTY101/PortfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -133,14 +133,14 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-							</section> --> 
+								</article> -->
+							</section> 
 
 						<!--Footer -->
 							<footer>
-								<div class="pagination">
-									<a href="#" class="previous">Prev</a>
-									<a href="#" class="page active">1</a>
+								<!-- <div class="pagination"> -->
+									<!-- <a href="#" class="previous">Prev</a> -->
+									<!-- <a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
@@ -148,7 +148,7 @@
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
-								</div>
+								</div> -->
 							</footer>
 
 					</div>
@@ -196,7 +196,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/jordan-petty-aa561268/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/JOPETTY101/PortfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
