--- a/index.html
+++ b/index.html
@@ -48,32 +48,45 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">July 30, 2021</span>
-									<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Covid-19-Views.sql">Data Exploration in SQL <br/>
-									</a></h2>
-									<p>Here I explore COVID-19 data utilizing SQL in Azure Data Studios.</p>
-								</header>
-								<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Covid-19-Views.sql" class="image main"><img src="images/Covid.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Covid-19-Views.sql" class="button large">View Project</a></li>
-								</ul>
-							</article>
+						<article class="post featured">
+							<header class="major">
+								<span class="date">Aug 5, 2021</span>
+								<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb">Movie Correlation with Python<br/>
+								</a></h2>
+								<p>I take a movie dataset and explore correlations between each field utilizing Python.</p>
+							</header>
+							<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="image main"><img src="images/Movies.jpg" alt="" /></a>
+							<ul class="actions special">
+								<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="button large">View Project</a></li>
+							</ul>
+						</article>
 
 						<!-- Posts -->
-							<section class="posts">
-								<article>
+
+						<section class="posts">
+							<article>
+								<header>
+									<span class="date">July 30, 2021</span>
+									<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Covid-19-Views.sql">Data Exploration in SQL</a></h2>
+								</header>
+								<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Covid-19-Views.sql" class="image fit"><img src="images/Covid.jpg" alt="" /></a>
+								<p>Here I explore COVID-19 data utilizing SQL in Azure Data Studios.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Covid-19-Views.sql" class="button">View Project</a></li>
+								</ul>
+							</article>
+							<article>
 									<header>
-										<span class="date">2021</span>
-										<h2><a href="#">Project 2 TBA</a></h2>
+										<span class="date">Aug 5, 2021</span>
+										<h2><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb">Movie Correlation with Python</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-									<p>More to come!</p>
+									<a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="image fit"><img src="images/Movies.jpg" alt="" /></a>
+									<p>I take a movie dataset and explore correlations between each field utilizing Python.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/JOPETTY101/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">2021</span>
@@ -86,6 +99,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">2021</span>
@@ -95,10 +109,10 @@
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>More to come!</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 						<header>
 										<span class="date">2021</span>
 										<h2><a href="#">Project 5 TBA<br />
@@ -107,9 +121,9 @@
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>More to come!</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
-								</article> 
+								</article>  -->
 								<!-- <article>
 									<header>
 										<span class="date">April 11, 2017</span>
